--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "NODE_ENV=production node app.js",
-		"dev": "NODE_ENV=development nodemon app.js"
+		"dev": "NODE_ENV=development node app.js"
 	},
 	"author": "",
 	"license": "ISC",
@@ -18,19 +18,14 @@
 		"cookie-session": "^2.0.0-beta.3",
 		"cors": "^2.8.4",
 		"express": "^4.14.0",
-		"jwt-decode": "^2.2.0",
-		"jwt-simple": "^0.5.1",
+		"express-formidable": "^1.0.0",
 		"moment": "^2.18.1",
 		"morgan": "^1.7.0",
-		"multer": "^1.3.1",
-		"passport": "^0.3.2",
-		"passport-jwt": "^4.0.0",
-		"passport-local": "^1.0.0",
+		"multer": "^1.3.0",
 		"pg-promise": "^8.1.1",
 		"sharp": "^0.20.5"
 	},
 	"devDependencies": {
-		"nodemon": "^1.17.4",
 		"pg-monitor": "^0.9.2",
 		"prettier": "^1.11.1"
 	},
