--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "NODE_ENV=production node app.js",
-		"dev": "NODE_ENV=development nodemon app.js"
+		"dev": "NODE_ENV=development nodemon --ignore 'uploads/' app.js"
 	},
 	"author": "",
 	"license": "ISC",
