--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"morgan": "^1.7.0",
 		"multer": "^1.3.0",
 		"pg-promise": "^8.1.1",
+		"random-token": "0.0.8",
 		"sharp": "^0.20.5"
 	},
 	"devDependencies": {
