--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
 		"cookie-session": "^2.0.0-beta.3",
 		"cors": "^2.8.4",
 		"express": "^4.14.0",
+		"lodash.random": "^3.2.0",
 		"moment": "^2.22.2",
 		"morgan": "^1.7.0",
 		"multer": "^1.3.0",
 		"pg-promise": "^8.1.1",
-		"random-token": "0.0.8",
 		"sharp": "^0.20.5"
 	},
 	"devDependencies": {
