--- a/package.json
+++ b/package.json
@@ -5,29 +5,34 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "NODE_ENV=production node app.js",
-		"dev": "NODE_ENV=development nodemon --ignore 'uploads/' app.js"
+		"dev": "NODE_ENV=development nodemon app.js"
+	},
+	"nodemonConfig": {
+		"ignore": [
+			"uploads"
+		]
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^2.0.1",
-		"bluebird": "^3.4.7",
-		"body-parser": "^1.15.2",
+		"bluebird": "^3.5.3",
+		"body-parser": "^1.18.3",
 		"consign": "^0.1.6",
 		"cookie-parser": "^1.4.3",
 		"cookie-session": "^2.0.0-beta.3",
-		"cors": "^2.8.4",
-		"express": "^4.14.0",
+		"cors": "^2.8.5",
+		"express": "^4.16.4",
 		"lodash.random": "^3.2.0",
 		"moment": "^2.22.2",
-		"morgan": "^1.7.0",
-		"multer": "^1.3.0",
-		"pg-promise": "^8.1.1",
-		"sharp": "^0.20.5"
+		"morgan": "^1.9.1",
+		"multer": "^1.4.1",
+		"pg-promise": "^8.5.1",
+		"sharp": "^0.20.8"
 	},
 	"devDependencies": {
 		"pg-monitor": "^0.9.2",
-		"prettier": "^1.11.1"
+		"prettier": "^1.14.3"
 	},
 	"description": ""
 }
