--- a/package.json
+++ b/package.json
@@ -1,38 +1,81 @@
 {
-	"name": "server",
-	"version": "1.0.0",
-	"main": "app.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "NODE_ENV=production node app.js",
-		"dev": "NODE_ENV=development nodemon app.js"
-	},
-	"nodemonConfig": {
-		"ignore": [
-			"uploads"
-		]
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"bcrypt": "^2.0.1",
-		"bluebird": "^3.5.3",
-		"body-parser": "^1.18.3",
-		"consign": "^0.1.6",
-		"cookie-parser": "^1.4.3",
-		"cookie-session": "^2.0.0-beta.3",
-		"cors": "^2.8.5",
-		"express": "^4.16.4",
-		"lodash.random": "^3.2.0",
-		"moment": "^2.22.2",
-		"morgan": "^1.9.1",
-		"multer": "^1.4.1",
-		"pg-promise": "^8.5.1",
-		"sharp": "^0.20.8"
-	},
-	"devDependencies": {
-		"pg-monitor": "^0.9.2",
-		"prettier": "^1.14.3"
-	},
-	"description": ""
+  "name": "server",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "NODE_ENV=test jest --watchAll",
+    "start": "NODE_ENV=production node app.js",
+    "dev": "NODE_ENV=development nodemon app.js",
+    "lint": "lint-staged"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write --double-quote",
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "uploads"
+    ]
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "verbose": false,
+    "modulePaths": [
+      "<rootDir>",
+      "node_modules"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupTests.js"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "json"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ],
+    "globalSetup": "<rootDir>/utils/seedDB.js",
+    "globalTeardown": "<rootDir>/utils/teardownDB.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/register": "^7.4.0",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "bcrypt": "^3.0.4",
+    "bluebird": "^3.5.3",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
+    "cors": "^2.8.5",
+    "express": "^4.16.4",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
+    "pg-monitor": "^0.9.2",
+    "pg-promise": "^8.5.1",
+    "sharp": "^0.20.8",
+    "supertest": "^4.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-import-resolver-babel-module": "^5.0.1",
+    "eslint-plugin-import": "^2.14.0",
+    "husky": "^1.1.3",
+    "jest": "^24.5.0",
+    "lint-staged": "^7.3.0",
+    "prettier": "^1.14.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
+  "description": ""
 }
