Finish adding tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
     "max-len": 0,
     "no-unused-expressions": 0,
     "valid-typeof": 0,
-    "no-unreachable": 0
+    "quotes": ["error", "double"]
   },
   "settings": {
     "import/resolver": {
